cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 17)
project(maze-2023)
set(CMAKE_BUILD_TYPE Debug)
set(OpenCV_DIR /home/pi/opencv-4.5.5/build)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /home/pi/opencv-4.5.5/lib/cmake/opencv4)
find_package(OpenCV REQUIRED)
add_compile_options(-fsanitize=address -static-libasan)
add_link_options(-fsanitize=address -static-libasan)
add_compile_definitions(ARDUINO=100)
add_executable(maze-2023 main.cpp matrix.cpp matrix.hpp search.cpp search.hpp Serial.cpp Serial.hpp tile.cpp tile.hpp camera.cpp camera.hpp arduino-compat/Arduino.h)
target_include_directories(maze-2023 PRIVATE ${OpenCV_INCLUDE_DIRS} arduino-compat)
target_link_libraries(maze-2023 PRIVATE ${OpenCV_LIBRARIES} stdc++fs)